--- a/files/src-bhe-bhe.html
+++ b/files/src-bhe-bhe.html
@@ -175,7 +175,8 @@ Public License (LGPL) para obtener una información más detallada.</p>
 
     </h4>
     <dl class="phpdocumentor-table-of-contents">
-                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Bhe.html"><abbr title="\bhexpress\api_client\bhe\Bhe">Bhe</abbr></a></dt><dd>Módulo que permite gestionar las BHE registradas y/o sincronizadas en BHExpress.</dd>    </dl>
+                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Bhe.html"><abbr title="\bhexpress\api_client\bhe\Bhe">Bhe</abbr></a></dt><dd>Módulo que permite gestionar las BHE registradas y/o sincronizadas
+en BHExpress.</dd>    </dl>
 
 
 
