--- a/files/src-bhe-receptores.html
+++ b/files/src-bhe-receptores.html
@@ -175,7 +175,8 @@ Public License (LGPL) para obtener una información más detallada.</p>
 
     </h4>
     <dl class="phpdocumentor-table-of-contents">
-                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Receptores.html"><abbr title="\bhexpress\api_client\bhe\Receptores">Receptores</abbr></a></dt><dd>Módulo que permite obtener información de receptores con los cuales se haya interactuado.</dd>    </dl>
+                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Receptores.html"><abbr title="\bhexpress\api_client\bhe\Receptores">Receptores</abbr></a></dt><dd>Módulo que permite obtener información de receptores con los cuales se
+haya interactuado.</dd>    </dl>
 
 
 
