--- a/files/src-bhe-servicios.html
+++ b/files/src-bhe-servicios.html
@@ -175,7 +175,8 @@ Public License (LGPL) para obtener una información más detallada.</p>
 
     </h4>
     <dl class="phpdocumentor-table-of-contents">
-                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Servicios.html"><abbr title="\bhexpress\api_client\bhe\Servicios">Servicios</abbr></a></dt><dd>Módulo que permite obtener información de servicios registrados que provees desde la cuenta de BHExpress.</dd>    </dl>
+                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Servicios.html"><abbr title="\bhexpress\api_client\bhe\Servicios">Servicios</abbr></a></dt><dd>Módulo que permite obtener información de servicios registrados que
+provees desde la cuenta de BHExpress.</dd>    </dl>
 
 
 
