--- a/namespaces/bhexpress-api-client-bhe.html
+++ b/namespaces/bhexpress-api-client-bhe.html
@@ -155,7 +155,10 @@
 
     </h4>
     <dl class="phpdocumentor-table-of-contents">
-                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Bhe.html"><abbr title="\bhexpress\api_client\bhe\Bhe">Bhe</abbr></a></dt><dd>Módulo que permite gestionar las BHE registradas y/o sincronizadas en BHExpress.</dd>            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Receptores.html"><abbr title="\bhexpress\api_client\bhe\Receptores">Receptores</abbr></a></dt><dd>Módulo que permite obtener información de receptores con los cuales se haya interactuado.</dd>            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Servicios.html"><abbr title="\bhexpress\api_client\bhe\Servicios">Servicios</abbr></a></dt><dd>Módulo que permite obtener información de servicios registrados que provees desde la cuenta de BHExpress.</dd>    </dl>
+                    <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Bhe.html"><abbr title="\bhexpress\api_client\bhe\Bhe">Bhe</abbr></a></dt><dd>Módulo que permite gestionar las BHE registradas y/o sincronizadas
+en BHExpress.</dd>            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Receptores.html"><abbr title="\bhexpress\api_client\bhe\Receptores">Receptores</abbr></a></dt><dd>Módulo que permite obtener información de receptores con los cuales se
+haya interactuado.</dd>            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/bhexpress-api-client-bhe-Servicios.html"><abbr title="\bhexpress\api_client\bhe\Servicios">Servicios</abbr></a></dt><dd>Módulo que permite obtener información de servicios registrados que
+provees desde la cuenta de BHExpress.</dd>    </dl>
 
 
 
